--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "bcrypt-as-promised": "^1.1.0",
     "body-parser": "^1.17.1",
-    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.1",
+    "dotenv": "^4.0.0",
     "express": "^4.12.3",
     "express-validation": "^1.0.2",
     "joi": "^10.2.2",
@@ -23,8 +24,7 @@
     "querystring": "^0.2.0",
     "request": "^2.81.0",
     "swagger-express-mw": "^0.1.0",
-    "yelp": "^1.0.2",
-    "dotenv": "^4.0.0"
+    "yelp": "^1.0.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
